--- a/style.css
+++ b/style.css
@@ -117,8 +117,20 @@ body {
     left: 50%;
     transform: translateX(-50%);
     width: 63%;
-    background-color:#D3DEDE;
-    color: #004346;
+    background-color:#f7d4b1;
+    color: black;
+    padding: 10px;
+    font-size: 14px;
+}
+.incorrect-city-message {
+    display: none;
+    position: absolute;
+    top: 90px; 
+    left: 50%;
+    transform: translateX(-50%);
+    width: 63%;
+    background-color:#f7d4b1;
+    color: black;
     padding: 10px;
     font-size: 14px;
 }
